# ChangeLog for net-voip/linphone
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-voip/linphone/ChangeLog,v 1.63 2011/11/06 12:47:49 grobian Exp $

  06 Nov 2011; Fabian Groffen <grobian@gentoo.org> linphone-3.4.3-r1.ebuild,
  linphone-3.4.3.ebuild, linphone-3.3.2.ebuild:
  Drop ~ppc-macos keyword for versions that (indirectly) depend on
  mediastreamer-2.7.3

  23 Oct 2011; Markus Meier <maekke@gentoo.org> linphone-3.4.3-r1.ebuild:
  x86 stable, bug #363311

  12 Oct 2011; Tony Vroon <chainsaw@gentoo.org> linphone-3.4.3-r1.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo, Ian
  "idella4" Delaney & Tomáš "Mepho" Pružina in bug #363311.

*linphone-3.4.3-r1 (24 May 2011)

  24 May 2011; Peter Volkov <pva@gentoo.org> -linphone-3.3.1.ebuild,
  +linphone-3.4.3-r1.ebuild:
  Add pax marking for linphone, bug #365353, thank Nikoli for report. Drop
  unused.

  14 May 2011; Thomas Kahle <tomka@gentoo.org> linphone-3.4.3.ebuild:
  x86 stable per bug 363311

  01 May 2011; Markos Chandras <hwoarang@gentoo.org> linphone-3.4.3.ebuild:
  Stable on amd64 wrt bug #363311

*linphone-3.4.3 (09 Apr 2011)

  09 Apr 2011; Peter Volkov <pva@gentoo.org> +linphone-3.4.3.ebuild,
  linphone-3.4.3-nls.patch:
  Version bump, bug #354533 thank Ivan Ivanich for report and Andrew Savchenko
  for help.

  09 Apr 2011; Peter Volkov <pva@gentoo.org> linphone-3.3.2.ebuild:
  Update mediastreamer dependency, bug #323281 thank Michael Weber and Petr
  Pisar.

  01 Jan 2011; Markos Chandras <hwoarang@gentoo.org> linphone-3.3.2.ebuild:
  Stable on amd64 wrt bug #349258

  27 Dec 2010; Thomas Kahle <tomka@gentoo.org> linphone-3.3.2.ebuild:
  x86 stable per bug 349258

  23 Oct 2010; Fabian Groffen <grobian@gentoo.org> linphone-3.3.2.ebuild:
  Fix compilation on Darwin

*linphone-3.3.2 (23 Jul 2010)

  23 Jul 2010; Peter Volkov <pva@gentoo.org> +linphone-3.3.2.ebuild:
  Version bump.
