@@ -1,6 +1,9 @@
 # ChangeLog for net-voip/linphone
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-voip/linphone/ChangeLog,v 1.63 2011/11/06 12:47:49 grobian Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-voip/linphone/ChangeLog,v 1.64 2012/01/06 15:06:36 ranger Exp $
+
+  06 Jan 2012; Brent Baude <ranger@gentoo.org> linphone-3.4.3.ebuild:
+  Marking linphone-3.4.3 ppc stable for bug 363311
 
   06 Nov 2011; Fabian Groffen <grobian@gentoo.org> linphone-3.4.3-r1.ebuild,
   linphone-3.4.3.ebuild, linphone-3.3.2.ebuild:
